--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-md-3">
-          <form>
+          <form name="rafael-contact-form">
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Nama</label>
-              <input type="text" class="form-control" id="exampleFormControlTextarea1" aria-describedby="" />
+              <input type="text" class="form-control" id="exampleFormControlTextarea1" aria-describedby="" name="nama" />
               <div id="" class="form-text"></div>
             </div>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Email</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email" />
               <div id="emailHelp" class="form-text"></div>
             </div>
             <div class="mb-3">
               <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="pesan"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
@@ -88,5 +88,16 @@
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbx8KgDfTvSsHoTSiJof8lYRxPrfBB5-5axhtm_SOerUzTc7SMHnhmkOGESHmsKWUnCF/exec";
+      const form = document.forms["rafael-contact-form"];
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => console.log("Success!", response))
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
 </html>
